force-app/main/default/objects/Fatura__c/Fatura__c.object-meta.xml
<CustomObject>
    <label>Fatura</label>
    <nameField>
        <label>Fatura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>