force-app/main/default/objects/Fatura__c/fields/data_de_vencimento__c.field-meta.xml
<CustomField>
    <fullName>data_de_vencimento__c</fullName>
    <label>data_de_vencimento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>