force-app/main/default/objects/Fatura__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Faturas</relationshipLabel>
    <relationshipName>Faturas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>