force-app/main/default/objects/Fatura__c/fields/valor_da_fatura__c.field-meta.xml
<CustomField>
    <fullName>valor_da_fatura__c</fullName>
    <label>valor_da_fatura</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>